aggiunto logger a server con eventi, aggiunto server socket e ciclo per accettare i socket